--- a/paddle/fluid/framework/ir/CMakeLists.txt
+++ b/paddle/fluid/framework/ir/CMakeLists.txt
@@ -32,6 +32,7 @@ pass_library(fc_fuse_pass inference)
 if (WITH_MKLDNN)
     pass_library(conv_relu_mkldnn_fuse_pass inference)
     pass_library(fc_mkldnn_pass inference)
+    pass_library(fc_relu_mkldnn_fuse_pass inference)
 endif ()
 pass_library(attention_lstm_fuse_pass inference)
 pass_library(infer_clean_graph_pass inference)
